--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
+    "react-router-dom": "^6.3.0",
     "react-scroll": "^1.8.7"
   },
   "devDependencies": {
